Closed Bug 1031982 Opened 11 years ago Closed 11 years ago

Suppress -Wsign-compare warning in third-party code: expat XML parser

Categories

(Core :: XML, defect, P4)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla33
Tracking Status
firefox32 --- wontfix
firefox33 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Suppress the one warning reported by clang and gcc in the third-party parser/expat code: > parser/expat/lib/xmlparse.c:6271:19 [-Wsign-compare] comparison of integers of different signs: 'int' and 'unsigned long' I don't think we should mark parser/expat as FAIL_ON_WARNINGS because it is third-party code, not Mozilla code.
Attachment #8447806 - Flags: review?(peterv)
Can we just add |(int)(...)| to INIT_BLOCK_SIZE? We've already modified it's definition in our tree anyway.
patch v2: Wrap INIT_BLOCK_SIZE definition in ((int)(...)) type cast.
Attachment #8447806 - Attachment is obsolete: true
Attachment #8447806 - Flags: review?(peterv)
Attachment #8449209 - Flags: review?(peterv)
Attachment #8449209 - Flags: review?(peterv) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: