Bug 1031982 - Cast away -Wsign-compare warning in XML parser. r=peterv